--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -922,6 +922,8 @@
         border: 1px solid #158466;
         margin-bottom: 28px;
         transition: 0.3s;
+        overflow: hidden;
+        position: relative;
 
         img {
             width: 100%;
@@ -1287,13 +1289,13 @@
 
 
     .timerimg {
-        width: 100%;
-        height: 100%;
+        width: 98px;
+        max-height: 100%;
         object-fit: cover;
         object-position: 50% 50%;
         position: absolute;
-        left: 0;
-        top: 0;
+        right: 0;
+        bottom: 0;
     }
 
     .timerwrapper__content {
@@ -1314,6 +1316,18 @@
             line-height: 120%;
             font-size: 50px;
             font-size: 36px;
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 39px;
+                height: 45px;
+                background: url('../img/main/timer-arr.svg') no-repeat center / 100%;
+                position: absolute;
+                right: 15px;
+                top: 0;
+                z-index: 2;
+            }
         }
 
         a {
@@ -1851,6 +1865,16 @@
 
     .mainsldierwrapper {
         padding-left: 0;
+    }
+
+    .timerwrapper .timerwrapper__content .title:after {
+        display: none;
+    }
+
+    .timerwrapper .timerimg {
+       max-width: 40%;
+       width: auto;
+       min-width: 140px;
     }
 
 }
