--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -1483,7 +1483,27 @@
     object-position: 0 0;
 }
 
+.header__cartbody {
+    overflow: auto;
+    max-height: calc(100vh - 300px);
 
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #158466;
+        border-radius: 10px;
+    }
+}
+
+.header__cartdropdown {
+    z-index: 2;
+}
 
 @media(max-width:1599.8px) {
     .mbsl__info .title {
@@ -1750,7 +1770,7 @@
         height: 100%;
     }
 
-    .mnslide  {
+    .mnslide {
         .col-xl-1 {
             display: none;
         }
@@ -1759,8 +1779,10 @@
     .mnslide.v3 .mbsl__info .title {
         font-size: 24px;
     }
-    
 
+    .header__cartdropdown {
+        z-index: 5;
+    }
 }
 
 @media(max-width:767.8px) {
@@ -1858,7 +1880,8 @@
         height: 260px;
     }
 
-    .mainslidersect .swiper-button-next.custom, .mainslidersect .swiper-button-prev.custom {
+    .mainslidersect .swiper-button-next.custom,
+    .mainslidersect .swiper-button-prev.custom {
         top: initial !important;
         bottom: 110px;
     }
@@ -1872,9 +1895,9 @@
     }
 
     .timerwrapper .timerimg {
-       max-width: 40%;
-       width: auto;
-       min-width: 140px;
+        max-width: 40%;
+        width: auto;
+        min-width: 140px;
     }
 
 }
