--- a/#source/scss/product.scss
+++ b/#source/scss/product.scss
@@ -1327,10 +1327,180 @@
     }
 }
 
+.productinfo__price {
+    width: 100%;
+    max-width: calc(100% - 140px);
+    flex: 0 0 calc(100% - 140px);
+}
+
+.availability {
+    width: 100%;
+    max-width: 140px;
+    flex: 0 0 140px;
+    text-align: right;
+    padding-bottom: 16px;
+
+    span {
+        font-size: 14px;
+        font-weight: 600;
+        color: #21292F;
+        position: relative;
+
+        &::after {
+            content: '';
+            display: inline-block;
+            border-radius: 50%;
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            left: -16px;
+            top: 50%;
+            transform: translateY(-50%);
+
+        }
+
+        &.instock {
+            &::after {
+                background: #158466;
+            }
+        }
+
+        &.outstock {
+            &::after {
+                background: #C9273A;
+            }
+        }
+    }
+}
+
+.notifstock {
+    width: 100%;
+    max-width: 376px;
+    border-radius: 40px;
+    background: #428BD6;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+        background: #2973be;
+    }
+}
+
+#notifmodal {
+    .modal-dialog {
+        max-width: 580px;
+    }
+
+    .modal-content {
+        border: none;
+        border-radius: 25px;
+    }
+
+    .modal-body {
+        padding: 45px 20px;
+    }
+
+    .btn-close {
+        position: absolute;
+        right: 39px;
+        top: 48px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background: rgba(#158466, 0.1);
+        z-index: 2;
+        opacity: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        transition: 0.3s;
+
+        &:hover {
+            background: rgba(#158466, 0.2);
+        }
+
+        img {
+            width: 12px;
+            vertical-align: top;
+        }
+    }
+}
+
+.notifmodal-wrapper {
+    max-width: 320px;
+    margin: 0 auto;
+
+    .title {
+        color: #158466;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 130%;
+        margin-bottom: 32px;
+    }
+
+    .inputfield {
+        margin-bottom: 20px;
+    }
+
+    input {
+        width: 100%;
+        height: 50px;
+        padding-left: 15px;
+        border-radius: 10px;
+        border: 1px solid #D9DBDF;
+       
+    }
+
+    button {
+        width: 100%;
+        border: none;
+        padding: 0;
+        outline: none;
+        transition: 0.3s;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-size: 15px;
+        font-weight: 600;
+        border-radius: 40px;
+        background: #158466;
+
+        &:hover {
+            background: #13b086;
+        }
+    }
+
+}
+
+
 
 @media(max-width:1599.8px) {
     .certificates .certificatebox {
         margin-bottom: 10px;
+    }
+
+    #notifmodal .modal-dialog {
+        max-width: 500px;
+    }
+
+    #notifmodal .modal-body {
+        padding: 30px 20px;
+    }
+
+    .notifmodal-wrapper .title {
+        margin-bottom: 24px;
     }
 }
 
@@ -1404,6 +1574,20 @@
 
 }
 
+@media(max-width:767.8px) {
+    .productinfo {
+        display: block;
+    }
+
+    .productinfo .productinfo__name {
+        display: none;
+    }
+
+    .productinfo.mob .productinfo__name {
+        display: block;
+    }
+}
+
 @media(max-width:575.8px) {
     .ingredientslist ul li {
         max-width: 100%;
@@ -1436,7 +1620,52 @@
     .prinfobox__body .supplementfacts .note {
         margin-top: 30px;
     }
+
+    .productinfo__price {
+        word-break: break-all;
+    }
+
+    .notifmodal-wrapper .title {
+        font-size: 18px;
+        margin-bottom: 20px;
+        padding-right: 30px;
+    }
+
+    #notifmodal .modal-content {
+        border-radius: 15px;
+    }
+
+    .notifmodal-wrapper .inputfield {
+        margin-bottom: 15px;
+    }
+
+    #notifmodal .btn-close {
+        right: 15px;
+        top: 15px;
+    }
+
+    .notifmodal-wrapper input {
+        height: 44px;
+    }
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 // -
 .product__autoreorder {
